# ThinkPRM

./: README.md  pyproject.toml
dataset/: __init__.py  prm_dataset.py
prm/: __init__.py  thinkprm_api.py
search-and-learn/: setup.py
search-and-learn/evaluation/: compute_pass_at_1.py  evaluate_file.py  evaluate_hf.py  evaluate_verifier_calibration.py  evaluate_verifier_correlation.py  grader.py  utils.py
search-and-learn/recipes/: launch_array_single_gpu.slurm
search-and-learn/recipes/MATH-500/Llama-3.2-3B-Instruct/: greedy.yaml
search-and-learn/recipes/MATH-500/Llama-3.2-3B-Instruct/beam_search/: disc_prm.yaml  mathshepherd_prm.yaml  thinkprm.yaml  thinkprm_parallel_scaling.yaml  thinkprm_sequential_scaling.yaml
search-and-learn/recipes/MATH-500/Llama-3.2-3B-Instruct/best_of_n/: math_shepherd.yaml  qwen_math_prm.yaml  thinkprm.yaml
search-and-learn/scripts/: test_time_compute.py
search-and-learn/src/sal/: config.py
search-and-learn/src/sal/models/: reward_models.py
search-and-learn/src/sal/search/: beam_search.py  best_of_n.py
search-and-learn/src/sal/utils/: code.py  data.py  math.py
utils/: answer_utils.py  callbacks.py  config.py  gsm8k_utils.py  helper.py  prompt_selector.py
